better view for mobile

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
             lg:px-16
             flex
             justify-center
-            sm:justify-between
+            md:justify-between
             items-center
           "
         >
           <img
             src="./img/adib.jpeg"
             alt=""
-            class="hidden sm:block h-10 rounded-full border border-gray-700"
+            class="hidden md:block h-10 rounded-full border border-gray-700"
           />
           <div class="flex items-center">
             <a href="https://www.facebook.com/adib.mohsin.39/" target="_blank">
