--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛠</text></svg>"
     />
+    <meta name="google-site-verification" content="1wETTGOWQzaMPZZIT_jNMOwTuHudpLQyRJItqpd2F44" />
     <title>Adib Mohsin</title>
     <script type="module" crossorigin src="/assets/index.c8e5928e.js"></script>
     <link rel="stylesheet" href="/assets/index.f4149cd5.css" />
